# Universal_Robotics_ROS2_Interface

./: README.md
log/: latest_list
src/move_ur1/: package.xml  setup.cfg  setup.py
src/move_ur1/launch/: ur_moveit.launch.py
src/move_ur1/move_ur1/: get_joint_states.py  get_state_ur5.py  plan_execution.py
